// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CrewList useContainer hook should match snapshot 1`] = `
{
  "sortedItems": [
    {
      "character": "Neo",
      "id": 1234,
      "popularity": 100500,
      "poster_path": "/image",
      "release_date": "1999-01-01",
      "title": "The Matrix",
    },
    {
      "character": "",
      "id": 1223,
      "popularity": 100500,
      "poster_path": "/image",
      "release_date": "2003-01-01",
      "title": "The Matrix Reloaded",
    },
  ],
}
`;

exports[`CrewList useContainer hook should match snapshot with other data 1`] = `
{
  "sortedItems": [
    {
      "department": "Directing",
      "id": 1234,
      "job": "Director",
      "popularity": 100500,
      "poster_path": "/image",
      "release_date": "1999-01-01",
      "title": "The Matrix",
    },
    {
      "department": "Directing",
      "id": 4321,
      "job": "Director",
      "popularity": 999,
      "poster_path": null,
      "release_date": "",
      "title": "Jupiter Ascending",
    },
  ],
}
`;
